--- a/level-1/Level_1_watches.ipynb
+++ b/level-1/Level_1_watches.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
             "\r0% [Connecting to archive.ubuntu.com] [Waiting for headers] [1 InRelease 0 B/3,\r0% [Connecting to archive.ubuntu.com] [Waiting for headers] [Connecting to ppa.\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com] [Waiting for h\r                                                                               \rIgn:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
@@ -81,8 +81,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2022-01-18 00:33:26--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
@@ -128,8 +128,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
             "|marketplace|customer_id|     review_id|product_id|product_parent|       product_title|product_category|star_rating|helpful_votes|total_votes|vine|verified_purchase|     review_headline|         review_body|review_date|\n",
@@ -191,8 +191,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The total number of records in the dataset is 960872\n"
           ]
@@ -215,8 +215,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "root\n",
             " |-- marketplace: string (nullable = true)\n",
@@ -254,8 +254,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+----------+--------------+-----------+\n",
             "|     review_id|customer_id|product_id|product_parent|review_date|\n",
@@ -304,8 +304,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "root\n",
             " |-- review_id: string (nullable = true)\n",
@@ -334,8 +334,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "root\n",
             " |-- review_id: string (nullable = true)\n",
@@ -368,8 +368,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "root\n",
             " |-- review_id: string (nullable = true)\n",
@@ -400,8 +400,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+----------+--------------+-----------+\n",
             "|     review_id|customer_id|product_id|product_parent|review_date|\n",
@@ -450,8 +450,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "root\n",
             " |-- product_id: string (nullable = true)\n",
@@ -468,10 +468,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "total_rows = watch_products_df.count()\n",
-        "print(f\"The total number of records in the dataset is before removing duplicates {total_rows}\")"
-      ],
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -479,35 +476,35 @@
         "id": "vJm6_R7ZpUpc",
         "outputId": "2c0de396-4efa-41de-bf2c-49b30db38230"
       },
-      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The total number of records in the dataset is before removing duplicates 960872\n"
           ]
         }
+      ],
+      "source": [
+        "total_rows = watch_products_df.count()\n",
+        "print(f\"The total number of records in the dataset is before removing duplicates {total_rows}\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# drop dupilcate rows\n",
-        "watch_products_df = watch_products_df.distinct()"
-      ],
+      "execution_count": 21,
       "metadata": {
         "id": "SuPCztOip49s"
       },
-      "execution_count": 21,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# drop dupilcate rows\n",
+        "watch_products_df = watch_products_df.distinct()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "total_rows = watch_products_df.count()\n",
-        "print(f\"The total number of records in the dataset is after removing duplicates {total_rows}\")"
-      ],
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -515,15 +512,18 @@
         "id": "J59s9OHGqLkb",
         "outputId": "894f5700-2a6a-4af8-fcd2-4e9e6e5d3eb3"
       },
-      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The total number of records in the dataset is after removing duplicates 149705\n"
           ]
         }
+      ],
+      "source": [
+        "total_rows = watch_products_df.count()\n",
+        "print(f\"The total number of records in the dataset is after removing duplicates {total_rows}\")"
       ]
     },
     {
@@ -538,8 +538,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+------------------+\n",
             "|customer_id|count(customer_id)|\n",
@@ -582,11 +582,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# rename \"count(customer_id)\" column\n",
-        "watch_customers_df = watch_customers_df.withColumnRenamed('count(customer_id)', 'customer_count')\n",
-        "watch_customers_df.show()"
-      ],
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -594,11 +590,10 @@
         "id": "bDMUFHWyrr5P",
         "outputId": "f1970bb7-04dc-4152-91b0-59a806451dd2"
       },
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+--------------+\n",
             "|customer_id|customer_count|\n",
@@ -628,14 +623,16 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# rename \"count(customer_id)\" column\n",
+        "watch_customers_df = watch_customers_df.withColumnRenamed('count(customer_id)', 'customer_count')\n",
+        "watch_customers_df.show()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "total_rows = watch_customers_df.count()\n",
-        "print(f\"The total number of records in the dataset is before removing duplicates {total_rows}\")"
-      ],
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -643,35 +640,35 @@
         "id": "MBrhkQ1iqoZc",
         "outputId": "d336b08d-e7d1-4f9f-f22a-a05944759567"
       },
-      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The total number of records in the dataset is before removing duplicates 719914\n"
           ]
         }
+      ],
+      "source": [
+        "total_rows = watch_customers_df.count()\n",
+        "print(f\"The total number of records in the dataset is before removing duplicates {total_rows}\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# drop dupilcate rows\n",
-        "watch_customers_df = watch_customers_df.distinct()"
-      ],
+      "execution_count": 25,
       "metadata": {
         "id": "5TiXKllpqzgA"
       },
-      "execution_count": 25,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# drop dupilcate rows\n",
+        "watch_customers_df = watch_customers_df.distinct()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "total_rows = watch_customers_df.count()\n",
-        "print(f\"The total number of records in the dataset is after removing duplicates {total_rows}\")"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -679,15 +676,18 @@
         "id": "6rs4y8D9q_S9",
         "outputId": "47964f60-1042-4588-f9d9-f608ac13ac3e"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The total number of records in the dataset is after removing duplicates 719914\n"
           ]
         }
+      ],
+      "source": [
+        "total_rows = watch_customers_df.count()\n",
+        "print(f\"The total number of records in the dataset is after removing duplicates {total_rows}\")"
       ]
     },
     {
@@ -702,8 +702,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+-------------+-----------+----+\n",
             "|     review_id|star_rating|helpful_votes|total_votes|vine|\n",
@@ -760,7 +760,7 @@
       "source": [
         "# configure settings for RDS\n",
         "mode = \"append\"\n",
-        "jdbc_url=\"jdbc:postgresql://myamazondb.cec7i89ma4zy.us-east-2.rds.amazonaws.com:5432/my_amazon_db\"\n",
+        "jdbc_url=\"xxxxxxxxxxx\"\n",
         "config = {\"user\":\"xxxxxxxx\", \n",
         "          \"password\": \"xxxxxxxxxxxxxxx\",\n",
         "          \"driver\":\"org.postgresql.Driver\"}"
@@ -781,42 +781,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "hoip4R-3o1Rm"
+      },
+      "outputs": [],
       "source": [
         "# write the watch_review_id_df to the watch_review_id table in postress\n",
         "\n",
         "watch_products_df.write.jdbc(url=jdbc_url, table='watch_products', mode=mode, properties=config)"
-      ],
-      "metadata": {
-        "id": "hoip4R-3o1Rm"
-      },
-      "execution_count": 23,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "0KOFK03arHeh"
+      },
+      "outputs": [],
       "source": [
         "# write the watch_customers_df to the watch_customers table in postress\n",
         "\n",
         "watch_customers_df.write.jdbc(url=jdbc_url, table='watch_customers', mode=mode, properties=config)"
-      ],
-      "metadata": {
-        "id": "0KOFK03arHeh"
-      },
-      "execution_count": 33,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "id": "KNA8esZgtxME"
+      },
+      "outputs": [],
       "source": [
         "# write the watch_customers_df to the watch_customers table in postress\n",
         "\n",
         "watch_vine_df.write.jdbc(url=jdbc_url, table='watch_vine', mode=mode, properties=config)"
-      ],
-      "metadata": {
-        "id": "KNA8esZgtxME"
-      },
-      "execution_count": 34,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
